--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -31,6 +31,8 @@ procmacros           = { version = "0.6.0", package = "esp-hal-procmacros", path
 strum                = { version = "0.25.0", default-features = false, features = ["derive"] }
 void                 = { version = "1.0.2", default-features = false }
 usb-device           = { version = "0.2.9", optional = true }
+frunk 		     = {version = "0.4.2", default-features = false}
+
 
 # async
 embedded-hal-async = { version = "=0.2.0-alpha.2", optional = true }
