--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -47,7 +47,7 @@ lis3dh-async       = { git = "https://github.com/jessebraham/lis3dh-rs-async", b
 sha2               = { version = "0.10.7", default-features = false}
 smart-leds         = "0.3.0"
 ssd1306            = "0.8.0"
-static_cell        = "1.2.0"
+static_cell        = { version = "1.2.0", features = ["nightly"] }
 
 [features]
 default            = ["rt", "vectored", "xtal40mhz"]
