--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -43,6 +43,7 @@ esp-backtrace      = { version = "0.7.0", features = ["esp32c6", "panic-handler"
 esp-hal-smartled   = { version = "0.4.0", features = ["esp32c6"], path = "../esp-hal-smartled" }
 esp-println        = { version = "0.5.0", features = ["esp32c6"] }
 heapless           = "0.7.16"
+hmac               = { version = "0.12.1", default-features = false }
 lis3dh-async       = { git = "https://github.com/jessebraham/lis3dh-rs-async", branch = "feature/eh-rc1" }
 sha2               = { version = "0.10.7", default-features = false}
 smart-leds         = "0.3.0"
