--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -36,6 +36,7 @@ usb-device           = { version = "0.2.9", optional = true }
 # async
 embedded-hal-async = { version = "=1.0.0-rc.1", optional = true }
 embedded-io-async  = { version = "0.5.0", optional = true }
+embassy-executor   = { version = "0.2.1", features = ["pender-callback", "integrated-timers"], optional = true } # pender is temporary
 embassy-sync       = { version = "0.2.0", optional = true }
 embassy-time       = { version = "0.1.3", features = ["nightly"], optional = true }
 embassy-futures    = { version = "0.1.0", optional = true }
@@ -99,8 +100,11 @@ ufmt = ["ufmt-write"]
 vectored = ["procmacros/interrupt"]
 
 # Implement the `embedded-hal-async==1.0.0-alpha.x` traits
-async   = ["embedded-hal-async", "eh1", "embassy-sync", "embassy-futures", "embedded-io-async"]
-embassy = ["embassy-time"]
+async    = ["embedded-hal-async", "eh1", "embassy-sync", "embassy-futures", "embedded-io-async"]
+embassy  = ["embassy-time"]
+
+embassy-executor-thread    = ["embassy", "embassy-executor"]
+embassy-executor-interrupt = ["embassy", "embassy-executor"]
 
 embassy-time-systick = []
 embassy-time-timg0   = []
