--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -79,6 +79,8 @@ opsram_2m  = ["esp-hal-common/opsram_2m", "psram"]
 opsram_4m  = ["esp-hal-common/opsram_4m", "psram"]
 opsram_8m  = ["esp-hal-common/opsram_8m", "psram"]
 
+log = ["esp-hal-common/log"]
+
 [profile.release]
 debug = true
 
