--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -16,6 +16,7 @@ bitflags             = "2.3.3"
 bitfield             = "0.14.0"
 cfg-if               = "1.0.0"
 critical-section     = "1.1.2"
+defmt                = { version = "=0.3.5", optional = true }
 embedded-can         = { version = "0.4.1", optional = true }
 embedded-dma         = "0.2.0"
 embedded-hal         = { version = "0.2.7", features = ["unproven"] }
@@ -134,3 +135,13 @@ debug = [
 ]
 
 log = ["dep:log"]
+defmt = [
+    "dep:defmt",
+    "embassy-executor?/defmt",
+    "embassy-sync?/defmt",
+    "embassy-time?/defmt",
+    "embassy-futures?/defmt",
+    "embedded-hal-1?/defmt-03",
+    "embedded-io/defmt-03",
+    "embedded-io-async?/defmt-03",
+]
